--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -262,34 +262,23 @@ nav {
                     border-bottom: 1px solid var(--gray3);
                     flex-direction: row;
                     max-width: 800px;
-                    padding: 5px 0;
                     display: flex;
                     width: 100%;
+                    padding: 4px 0;
                 }
-
-                    .panel .body .properties .user-form .field-container .text-group .identifier {
-                        height: 100%;
-                        width: 200px;
-                    }
-
-                    .panel .body .properties .user-form .field-container .text-group .info-content {
-                        flex-direction: column;
-                        flex-wrap: wrap;
-                        display: flex;
-                        flex-grow: 1;
-                        height: 100%;
-                        width: 200px;
-                    }
 
                     .panel .body .properties .user-form .field-container .text-group .title {
                         color: var(--textSub1);
                         font-size: 18px;
-                        margin: 0;
+                        min-width: 200px;
+                        height: 100%;
                     }
 
                     .panel .body .properties .user-form .field-container .text-group .info {
-                        margin-left: 10px;
+                        display: flex;
+                        flex-wrap: wrap;
                         font-size: 18px;
+                        width: 100%;
                     }
 
             .panel .body .properties .tool-container {
