Explicit types working fully

--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -59,7 +59,7 @@
                     }
                     <div class="text-group">
                         <p class="title">Location</p>
-                        <p class="info">@Model.Location.Name</p>
+                        <p class="info">@Model.TrainingOrder.Location.Name</p>
                     </div>
                     <div class="text-group">
                         <p class="title">Learning Medium</p>
