--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -56,10 +56,7 @@
                                     <p class="control-label">Location*</p>
                                     <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
                                 </div>
-                                <select asp-for="TrainingOrder.LocationId" class="form-control">
-                                    @foreach(var loc in Model.Locations) {
-                                        <option value="@loc.Id">@loc.Name</option>
-                                    }
+                                <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations">
                                 </select>
                             </div>
                             <div class="form">
